
* Wed Mar 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090304 
- Added matrix condensation option to the command line
- Improved command line interface (now "frame3dd infile outfile" is ok)
- Improved user-manual.html regarding command-line options with examples
- Command-line help is ...

FRAME3DD version: 20090304
Analysis of 2D and 3D structural frames with elastic and geometric stiffness.
http://frame3dd.sourceforge.net

FRAME3DD may be run with interactive prompting for file names by typing ...
	frame3dd 

FRAME3DD may be run without command-line options by typing ...
	frame3dd <InFile> <OutFile> 

FRAME3DD may be run with command-line options by typing ...
	frame3dd -i <InFile> -o <OutFile> [OPTIONS] 

... where [OPTIONS] over-rides values in the input data file and includes
one or more of the following:

------------------------------------------------------------------------
-i  <InFile>  the  input data file name --- described in the manual
-o <OutFile>  the output data file name
-h            print this help message and exit
-v            display program version and exit
-c            data check only - the output data reviews the input data
-q            suppress screen output except for warning messages
-s  On|Off    On: include shear deformation or Off: neglect ...
-g  On|Off    On: include geometric stiffness or Off: neglect ...
-e <value>    level of deformation exaggeration for Gnuplot output
-l  On|Off    On: lumped mass matrix or Off: consistent mass matrix
-f <value>    modal frequency shift for unrestrained structures
-m   J|S      modal analysis method: J=Jacobi-Subspace or S=Stodola
-t <value>    convergence tolerance for modal analysis
-p <value>    pan rate for mode shape animation
-r <value>    matrix condensation method: 0, 1, 2, or 3 
------------------------------------------------------------------------


* Wed Mar 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090304
- Implement command line parsing using the getopt function