@@ -407,6 +407,7 @@ int main ( int argc, char *argv[] ) {
 					printf("\n Non-Linear Elastic Analysis ...\n");
 			}
 
+			ok = 0; iter = 0; error = 1.0;	/* re-initialize */
 			while ( geom && error > tol && iter < 10 && ok >= 0) {
 				++iter;
 
